// Gloria Lácteos - Database Schema
// Diagrama DBML actualizado - Diciembre 2025

Project gloria_lacteos {
  database_type: 'SQLite'
  Note: 'E-commerce de productos lácteos Gloria - Ruby on Rails 8.1'
}

// ============================================
// TABLAS DE USUARIOS Y AUTENTICACIÓN
// ============================================

Table roles {
  id integer [pk, increment]
  name varchar [note: 'Admin o Cliente']
  created_at datetime [not null]
  updated_at datetime [not null]
  
  Note: 'Solo dos roles: Admin y Cliente'
}

Table users {
  id integer [pk, increment]
  name varchar
  email varchar [unique]
  password_digest varchar [note: 'bcrypt hash']
  role_id integer [not null, ref: > roles.id]
  active boolean [default: true]
  created_at datetime [not null]
  updated_at datetime [not null]
  
  Note: 'Usuarios del sistema con autenticación bcrypt'
}

Table addresses {
  id integer [pk, increment]
  user_id integer [not null, ref: > users.id]
  name varchar [note: 'Nombre de la dirección']
  street varchar
  district varchar
  city varchar
  created_at datetime [not null]
  updated_at datetime [not null]
  
  Note: 'Direcciones de entrega de los usuarios'
}

// ============================================
// TABLAS DE PRODUCTOS
// ============================================

Table categories {
  id integer [pk, increment]
  name varchar
  parent_id integer [ref: > categories.id, note: 'Subcategorías']
  created_at datetime [not null]
  updated_at datetime [not null]
  
  Note: 'Categorías jerárquicas de productos'
}

Table providers {
  id integer [pk, increment]
  name varchar
  contact_email varchar
  created_at datetime [not null]
  updated_at datetime [not null]
  
  Note: 'Proveedores de productos'
}

Table batches {
  id integer [pk, increment]
  batch_number varchar [unique, note: 'Número de lote único']
  quantity integer [note: 'Cantidad en el lote']
  expiration_date date [not null, note: 'Fecha de vencimiento']
  created_at datetime [not null]
  updated_at datetime [not null]
  
  Note: 'Lotes de productos con fecha de vencimiento'
}

Table products {
  id integer [pk, increment]
  sku varchar [unique, not null]
  name varchar [not null]
  description text
  price decimal [not null]
  stock integer [not null, default: 0, note: '0 significa Agotado']
  image_url varchar [note: 'URL externa de imagen']
  is_perishable boolean [default: false]
  category_id integer [not null, ref: > categories.id]
  provider_id integer [not null, ref: > providers.id]
  batch_id integer [ref: > batches.id, note: 'Lote opcional']
  created_at datetime [not null]
  updated_at datetime [not null]
  
  Note: 'Productos de la tienda'
}

// ============================================
// TABLAS DE CARRITO Y ÓRDENES
// ============================================

Table cart_items {
  id integer [pk, increment]
  user_id integer [not null, ref: > users.id]
  product_id integer [not null, ref: > products.id]
  quantity integer [not null]
  created_at datetime [not null]
  updated_at datetime [not null]
  
  Note: 'Items del carrito persistente - se guarda al logout'
}

Table orders {
  id integer [pk, increment]
  user_id integer [not null, ref: > users.id]
  address_id integer [ref: > addresses.id, note: 'Opcional']
  order_number varchar [unique, note: 'Formato: ORD-YYYYMMDD-XXXXX']
  status varchar [note: 'pendiente, enviado, entregado']
  total decimal
  created_at datetime [not null]
  updated_at datetime [not null]
  
  Note: 'Órdenes de compra creadas al hacer checkout'
}

Table order_items {
  id integer [pk, increment]
  order_id integer [not null, ref: > orders.id]
  product_id integer [not null, ref: > products.id]
  quantity integer [not null]
  price decimal [note: 'Precio al momento de la compra']
  created_at datetime [not null]
  updated_at datetime [not null]
  
  Note: 'Items individuales de cada orden'
}

// ============================================
// TABLAS DE ACTIVE STORAGE
// ============================================

Table active_storage_blobs {
  id integer [pk, increment]
  key varchar [unique, not null]
  filename varchar [not null]
  content_type varchar
  metadata text
  service_name varchar [not null]
  byte_size bigint [not null]
  checksum varchar
  created_at datetime [not null]
  
  Note: 'Archivos almacenados por Active Storage'
}

Table active_storage_attachments {
  id integer [pk, increment]
  name varchar [not null]
  record_type varchar [not null]
  record_id bigint [not null]
  blob_id bigint [not null, ref: > active_storage_blobs.id]
  created_at datetime [not null]
  
  Note: 'Relación polimórfica entre archivos y modelos'
}

Table active_storage_variant_records {
  id integer [pk, increment]
  blob_id bigint [not null, ref: > active_storage_blobs.id]
  variation_digest varchar [not null]
  
  Note: 'Variantes de imágenes'
}
